@@ -35,3 +35,5 @@
 
 (fn package-name (x)
   x.n)
+
+(fn find-symbol (name package))
